[gd_scene load_steps=7 format=2]

[ext_resource path="res://Script/Coin.gd" type="Script" id=1]
[ext_resource path="res://Assets/baldeGeral.png" type="Texture" id=2]
[ext_resource path="res://Assets/tintaBalde.png" type="Texture" id=3]
[ext_resource path="res://Sons/smb_coin.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=2]
radius = 42.9535

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 30, 10, 20 )
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 6.0

[node name="Coins" type="Area2D"]
scale = Vector2( 0.3, 0.3 )
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="Sprite" parent="."]
scale = Vector2( 0.0516667, 0.0525 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.052, 0.052 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AudioCoins" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, -16.6667 )
process_material = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Coins_body_entered"]
